# scrolly-telling

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile-deploy  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.gitlab/ci/: common.yml  templates.yml
deployment/base/: app.yml  ingress.yml  kustomization.yml
deployment/xtraman.org/: kustomization.yml  patch_app.yml  patch_ingress.yml
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  prettier.config.cjs
frontend/src/: App.tsx  main.tsx  usePostWebsite.ts
frontend/src/components/: AnimationContainer.tsx  AnimationDrawer.tsx  ComponentDrawer.tsx  FrameControl.tsx  Header.tsx  ImagePreviewPopover.tsx  ScrollyAnimationCard.tsx  ScrollyAnimationForm.tsx  ScrollyComponentCard.tsx  ScrollyComponentForm.tsx  ScrollyContainer.tsx  ScrollyForm.tsx  ScrollyLeftPanel.tsx  ScrollyMainPanel.tsx  ScrollyRightPanel.tsx  ScrollySideBar.tsx
frontend/src/components/button/: DownloadButton.tsx  LoadPayloadButton.tsx  ResetButton.tsx
frontend/src/components/card/: CardBody.tsx  CardLabel.tsx  ScrollyComponentCard.tsx  ScrollyComponentDisplay.tsx
frontend/src/components/form/: FrameFormLabel.tsx  ScrollyComponentForm.tsx  ScrollyComponentSelect.tsx  ScrollyFileUploader.tsx  ScrollyForm.tsx  ScrollyHtmlUploader.tsx  ScrollyImageUploader.tsx  ScrollyRichTextEditor.tsx
frontend/src/hooks/: useAnimationOptions.ts  useGenerateWebsite.ts  usePayload.ts  usePostWebsite.ts  useUploadImage.ts
frontend/src/layout/: ScrollyLeftPanel.tsx  ScrollyMainPanel.tsx  ScrollyRightPanel.tsx
frontend/src/store/: index.ts
frontend/src/types/: index.ts
frontend/src/util/: editorUtil.ts  localStorageUtil.ts  sessionStorageUtil.ts
server/: __init__.py  content_generator.py  main.py  parser.py  test_minio.py
server/model/: Article.py  PluginRegistration.py  animation.py  article.py  component.py  frame.py  html.py  image.py  layout.py  page.py  payload.py  response_error.py  response_successful.py
server/model/script/: pin_script_builder.py  script_constants.py  script_generator.py  script_processor.py
server/model/script/animation/: animation_script_factory.py  animation_script_processor.py  animation_scroll_trigger.py
server/model/script/animation/animation_scripts/: animation_script.py  fade_animation_script.py  fly_in_bottom_animation_script.py  fly_in_left_animation_script.py  fly_in_right_animation_script.py  overlap_animation_script.py  zoom_animation_script.py
server/model/script/animation/util/: component_groups.py  component_id_parser.py
server/templates/: index.html  test.html
server/templates/css/: styles.css  test-styles.css
server/templates/js/: animation.js
server/templates/js/gsap/: registerPlugin.js  registerScrollTrigger.js
server/utilities/: constants.py  utils.py
